--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
     <button id="restartButton">Restart Game</button>
     <p class="winning-message" id="winningMessage"></p>
   </div>
+
+  <!-- Overlay -->
+  <div id="overlay" class="overlay hidden">
+    <div class="overlay-content">
+      <h2 id="overlayText"></h2>
+      <button onclick="location.reload()">Play Again</button>
+    </div>
+  </div>
+
+  <!-- Confetti library -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+  <script src="first.js"></script>
 </body>
-   <script src="first.js"></script>
 </html>
+
+
+
+
+
+
+
+
